--- a/hp/dlpack/_modules/gstaichi/lang/impl.html
+++ b/hp/dlpack/_modules/gstaichi/lang/impl.html
@@ -784,17 +784,19 @@
             <span class="p">)</span>
 
     <span class="k">def</span><span class="w"> </span><span class="nf">_check_gradient_field_not_placed</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">gradient_type</span><span class="p">):</span>
-        <span class="n">not_placed</span> <span class="o">=</span> <span class="nb">set</span><span class="p">()</span>
-        <span class="n">gradient_vars</span> <span class="o">=</span> <span class="p">[]</span>
         <span class="k">if</span> <span class="n">gradient_type</span> <span class="o">==</span> <span class="s2">&quot;grad&quot;</span><span class="p">:</span>
             <span class="n">gradient_vars</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">grad_vars</span>
         <span class="k">elif</span> <span class="n">gradient_type</span> <span class="o">==</span> <span class="s2">&quot;dual&quot;</span><span class="p">:</span>
             <span class="n">gradient_vars</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">dual_vars</span>
+        <span class="k">else</span><span class="p">:</span>
+            <span class="k">return</span>
+
+        <span class="n">not_placed</span> <span class="o">=</span> <span class="nb">set</span><span class="p">()</span>
         <span class="k">for</span> <span class="n">_var</span> <span class="ow">in</span> <span class="n">gradient_vars</span><span class="p">:</span>
             <span class="k">if</span> <span class="n">_var</span><span class="o">.</span><span class="n">ptr</span><span class="o">.</span><span class="n">snode</span><span class="p">()</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
                 <span class="n">not_placed</span><span class="o">.</span><span class="n">add</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_get_tb</span><span class="p">(</span><span class="n">_var</span><span class="p">))</span>
 
-        <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">not_placed</span><span class="p">):</span>
+        <span class="k">if</span> <span class="n">not_placed</span><span class="p">:</span>
             <span class="n">bar</span> <span class="o">=</span> <span class="s2">&quot;=&quot;</span> <span class="o">*</span> <span class="mi">44</span> <span class="o">+</span> <span class="s2">&quot;</span><span class="se">\n</span><span class="s2">&quot;</span>
             <span class="k">raise</span> <span class="ne">RuntimeError</span><span class="p">(</span>
                 <span class="sa">f</span><span class="s2">&quot;These field(s) requrie `needs_</span><span class="si">{</span><span class="n">gradient_type</span><span class="si">}</span><span class="s2">=True`, however their </span><span class="si">{</span><span class="n">gradient_type</span><span class="si">}</span><span class="s2"> field(s) are not placed:</span><span class="se">\n</span><span class="si">{</span><span class="n">bar</span><span class="si">}</span><span class="s2">&quot;</span>
