--- a/hp/dlpack/_modules/gstaichi/lang/kernel_impl.html
+++ b/hp/dlpack/_modules/gstaichi/lang/kernel_impl.html
@@ -394,6 +394,13 @@
 <span class="n">MAX_ARG_NUM</span> <span class="o">=</span> <span class="mi">512</span>
 
 
+<span class="c1"># Define proxies for fast lookup</span>
+<span class="n">_NONE</span><span class="p">,</span> <span class="n">_VALIDATION</span><span class="p">,</span> <span class="n">_FORWARD</span><span class="p">,</span> <span class="n">_REVERSE</span> <span class="o">=</span> <span class="p">(</span>
+    <span class="n">AutodiffMode</span><span class="o">.</span><span class="n">NONE</span><span class="p">,</span>
+    <span class="n">AutodiffMode</span><span class="o">.</span><span class="n">VALIDATION</span><span class="p">,</span>
+    <span class="n">AutodiffMode</span><span class="o">.</span><span class="n">FORWARD</span><span class="p">,</span>
+    <span class="n">AutodiffMode</span><span class="o">.</span><span class="n">REVERSE</span><span class="p">,</span>
+<span class="p">)</span>
 <span class="n">_arch_cuda</span> <span class="o">=</span> <span class="n">_ti_core</span><span class="o">.</span><span class="n">Arch</span><span class="o">.</span><span class="n">cuda</span>
 
 <span class="n">CompiledKernelKeyType</span> <span class="o">=</span> <span class="nb">tuple</span><span class="p">[</span><span class="n">Callable</span><span class="p">,</span> <span class="nb">int</span><span class="p">,</span> <span class="n">AutodiffMode</span><span class="p">]</span>
@@ -793,7 +800,7 @@
         <span class="k">assert</span> <span class="bp">self</span><span class="o">.</span><span class="n">current_kernel</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span>
 
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">is_real_function</span><span class="p">:</span>
-            <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">current_kernel</span><span class="o">.</span><span class="n">autodiff_mode</span> <span class="o">!=</span> <span class="n">AutodiffMode</span><span class="o">.</span><span class="n">NONE</span><span class="p">:</span>
+            <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">current_kernel</span><span class="o">.</span><span class="n">autodiff_mode</span> <span class="o">!=</span> <span class="n">_NONE</span><span class="p">:</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">current_kernel</span> <span class="o">=</span> <span class="kc">None</span>
                 <span class="k">raise</span> <span class="n">GsTaichiSyntaxError</span><span class="p">(</span><span class="s2">&quot;Real function in gradient kernels unsupported.&quot;</span><span class="p">)</span>
             <span class="n">instance_id</span><span class="p">,</span> <span class="n">arg_features</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">mapper</span><span class="o">.</span><span class="n">lookup</span><span class="p">(</span><span class="n">impl</span><span class="o">.</span><span class="n">current_cfg</span><span class="p">()</span><span class="o">.</span><span class="n">raise_on_templated_floats</span><span class="p">,</span> <span class="n">args</span><span class="p">)</span>
@@ -1454,7 +1461,7 @@
                 <span class="n">used_py_dataclass_parameters_enforcing</span><span class="o">=</span><span class="n">used_py_dataclass_leaves_by_key_enforcing</span><span class="p">,</span>
             <span class="p">)</span>
 
-            <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">autodiff_mode</span> <span class="o">!=</span> <span class="n">AutodiffMode</span><span class="o">.</span><span class="n">NONE</span><span class="p">:</span>
+            <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">autodiff_mode</span> <span class="o">!=</span> <span class="n">_NONE</span><span class="p">:</span>
                 <span class="n">KernelSimplicityASTChecker</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">func</span><span class="p">)</span><span class="o">.</span><span class="n">visit</span><span class="p">(</span><span class="n">tree</span><span class="p">)</span>
 
             <span class="c1"># Do not change the name of &#39;gstaichi_ast_generator&#39;</span>
@@ -1753,9 +1760,9 @@
         <span class="c1"># Transform the primal kernel to forward mode grad kernel</span>
         <span class="c1"># then recover to primal when exiting the forward mode manager</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">runtime</span><span class="o">.</span><span class="n">fwd_mode_manager</span> <span class="ow">and</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">runtime</span><span class="o">.</span><span class="n">grad_replaced</span><span class="p">:</span>
-            <span class="c1"># TODO: if we would like to compute 2nd-order derivatives by forward-on-reverse in a nested context manager fashion,</span>
-            <span class="c1"># i.e., a `Tape` nested in the `FwdMode`, we can transform the kernels with `mode_original == AutodiffMode.REVERSE` only,</span>
-            <span class="c1"># to avoid duplicate computation for 1st-order derivatives</span>
+            <span class="c1"># TODO: if we would like to compute 2nd-order derivatives by forward-on-reverse in a nested context manager</span>
+            <span class="c1"># fashion, i.e., a `Tape` nested in the `FwdMode`, we can transform the kernels with</span>
+            <span class="c1"># `mode_original == AutodiffMode.REVERSE` only, to avoid duplicate computation for 1st-order derivatives.</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">runtime</span><span class="o">.</span><span class="n">fwd_mode_manager</span><span class="o">.</span><span class="n">insert</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span>
 
         <span class="c1"># Both the class kernels and the plain-function kernels are unified now.</span>
@@ -1763,14 +1770,10 @@
         <span class="c1"># gradient. For class kernels, args[0] is always the kernel owner.</span>
 
         <span class="c1"># No need to capture grad kernels because they are already bound with their primal kernels</span>
-        <span class="k">if</span> <span class="p">(</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">autodiff_mode</span> <span class="ow">in</span> <span class="p">(</span><span class="n">AutodiffMode</span><span class="o">.</span><span class="n">NONE</span><span class="p">,</span> <span class="n">AutodiffMode</span><span class="o">.</span><span class="n">VALIDATION</span><span class="p">)</span>
-            <span class="ow">and</span> <span class="bp">self</span><span class="o">.</span><span class="n">runtime</span><span class="o">.</span><span class="n">target_tape</span>
-            <span class="ow">and</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">runtime</span><span class="o">.</span><span class="n">grad_replaced</span>
-        <span class="p">):</span>
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">autodiff_mode</span> <span class="ow">in</span> <span class="p">(</span><span class="n">_NONE</span><span class="p">,</span> <span class="n">_VALIDATION</span><span class="p">)</span> <span class="ow">and</span> <span class="bp">self</span><span class="o">.</span><span class="n">runtime</span><span class="o">.</span><span class="n">target_tape</span> <span class="ow">and</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">runtime</span><span class="o">.</span><span class="n">grad_replaced</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">runtime</span><span class="o">.</span><span class="n">target_tape</span><span class="o">.</span><span class="n">insert</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">args</span><span class="p">)</span>
 
-        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">autodiff_mode</span> <span class="o">!=</span> <span class="n">AutodiffMode</span><span class="o">.</span><span class="n">NONE</span> <span class="ow">and</span> <span class="n">impl</span><span class="o">.</span><span class="n">current_cfg</span><span class="p">()</span><span class="o">.</span><span class="n">opt_level</span> <span class="o">==</span> <span class="mi">0</span><span class="p">:</span>
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">autodiff_mode</span> <span class="o">!=</span> <span class="n">_NONE</span> <span class="ow">and</span> <span class="n">impl</span><span class="o">.</span><span class="n">current_cfg</span><span class="p">()</span><span class="o">.</span><span class="n">opt_level</span> <span class="o">==</span> <span class="mi">0</span><span class="p">:</span>
             <span class="n">_logging</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span><span class="s2">&quot;&quot;&quot;opt_level = 1 is enforced to enable gradient computation.&quot;&quot;&quot;</span><span class="p">)</span>
             <span class="n">impl</span><span class="o">.</span><span class="n">current_cfg</span><span class="p">()</span><span class="o">.</span><span class="n">opt_level</span> <span class="o">=</span> <span class="mi">1</span>
         <span class="n">key</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">ensure_compiled</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">)</span>
@@ -1820,8 +1823,8 @@
 
     <span class="k">if</span> <span class="n">verbose</span><span class="p">:</span>
         <span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;kernel=</span><span class="si">{</span><span class="n">_func</span><span class="o">.</span><span class="vm">__name__</span><span class="si">}</span><span class="s2"> is_classkernel=</span><span class="si">{</span><span class="n">is_classkernel</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
-    <span class="n">primal</span> <span class="o">=</span> <span class="n">Kernel</span><span class="p">(</span><span class="n">_func</span><span class="p">,</span> <span class="n">autodiff_mode</span><span class="o">=</span><span class="n">AutodiffMode</span><span class="o">.</span><span class="n">NONE</span><span class="p">,</span> <span class="n">_classkernel</span><span class="o">=</span><span class="n">is_classkernel</span><span class="p">)</span>
-    <span class="n">adjoint</span> <span class="o">=</span> <span class="n">Kernel</span><span class="p">(</span><span class="n">_func</span><span class="p">,</span> <span class="n">autodiff_mode</span><span class="o">=</span><span class="n">AutodiffMode</span><span class="o">.</span><span class="n">REVERSE</span><span class="p">,</span> <span class="n">_classkernel</span><span class="o">=</span><span class="n">is_classkernel</span><span class="p">)</span>
+    <span class="n">primal</span> <span class="o">=</span> <span class="n">Kernel</span><span class="p">(</span><span class="n">_func</span><span class="p">,</span> <span class="n">autodiff_mode</span><span class="o">=</span><span class="n">_NONE</span><span class="p">,</span> <span class="n">_classkernel</span><span class="o">=</span><span class="n">is_classkernel</span><span class="p">)</span>
+    <span class="n">adjoint</span> <span class="o">=</span> <span class="n">Kernel</span><span class="p">(</span><span class="n">_func</span><span class="p">,</span> <span class="n">autodiff_mode</span><span class="o">=</span><span class="n">_REVERSE</span><span class="p">,</span> <span class="n">_classkernel</span><span class="o">=</span><span class="n">is_classkernel</span><span class="p">)</span>
     <span class="c1"># Having |primal| contains |grad| makes the tape work.</span>
     <span class="n">primal</span><span class="o">.</span><span class="n">grad</span> <span class="o">=</span> <span class="n">adjoint</span>
 
